--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ Note
 <li>erodibility</li>
 </ol>
 <p>The returned results are more than 1,000. I browsed the ranked lists based on relevance and selected around 60 papers which I feel are more of interests of our committee. The list is clearly incomplete and biased. So it is only intended to provide a reference for those who need it.</p>
-<p>Since it is based on searches, I believe some high quality papers were missing in the list. Therefore, <strong>I invite you to send me the information of papers that deserve attention but not included in the list and I can then update it. </strong></p>
+<p>Since it is based on searches, I believe some high quality papers were missing in the list. Therefore, <strong>I invite you to send me the information of papers that deserve attention but not included in the list and I can then update it. </strong> It can and should be a community effort.</p>
 <p>To nominate a paper for the awards (including but not limited to Norman/Croes, and Middlebrooks), you can either email me via <a href="">jtao25 at asu.edu</a>, or submit your nomination <strong>anonymously </strong>using this <a href="https://forms.gle/Yb2ggyVsrCqmQgns9">google form</a>.</p>
 <p>The list of papers are organised based on the journals/conferences they appear. Use the right-hand side panel to navigate.</p>
 </section>
