--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 <ul class="collapse">
 <li><a href="#journal-of-geotechnical-and-geoenvironmental-engineering" class="nav-link" data-scroll-target="#journal-of-geotechnical-and-geoenvironmental-engineering">Journal of Geotechnical and Geoenvironmental Engineering</a></li>
 <li><a href="#international-journal-of-geomechanics" class="nav-link" data-scroll-target="#international-journal-of-geomechanics">International Journal of Geomechanics</a></li>
-<li><a href="#more-hydrowater-related" class="nav-link" data-scroll-target="#more-hydrowater-related">More hydro/water related</a></li>
-<li><a href="#more-structuralmaterial-related" class="nav-link" data-scroll-target="#more-structuralmaterial-related">More structural/material related</a></li>
+<li><a href="#more-hydrowater-related-journals" class="nav-link" data-scroll-target="#more-hydrowater-related-journals">More hydro/water related journals</a></li>
+<li><a href="#more-structuralmaterial-related-journals" class="nav-link" data-scroll-target="#more-structuralmaterial-related-journals">More structural/material related journals</a></li>
 <li><a href="#other-asce-conference-proceedings" class="nav-link" data-scroll-target="#other-asce-conference-proceedings">Other ASCE Conference proceedings</a></li>
 </ul></li>
 </ul>
@@ -105,8 +105,8 @@ Note
 <p>Wu, J., C. Jia, and L. W. Zhang (2021). “Expansion of Water Inrush Channel by Water Erosion and Seepage Force”. In: <em>International Journal of Geomechanics</em> 21.7, p.&nbsp;04021121. ISSN: 1943-5622. DOI: <a href="https://doi.org/10.1061%2F%28ASCE%29GM.1943-5622.0001985">10.1061/(ASCE)GM.1943-5622.0001985</a>.</p>
 </div>
 </section>
-<section id="more-hydrowater-related" class="level3">
-<h3 class="anchored" data-anchor-id="more-hydrowater-related">More hydro/water related</h3>
+<section id="more-hydrowater-related-journals" class="level3">
+<h3 class="anchored" data-anchor-id="more-hydrowater-related-journals">More hydro/water related journals</h3>
 <p>Included journals are:</p>
 <ul>
 <li>Journal of Hydraulic Engineering</li>
@@ -146,8 +146,8 @@ Note
 <p>Zhu, Bin, Xiaofeng Wu, Yubing Wang, and Yunmin Chen (2020). “Centrifuge Modeling for Seismic Response of Fixed-End Model Piles Considering Local Scour”. In: <em>Journal of Waterway, Port, Coastal, and Ocean Engineering</em> 146.6, p.&nbsp;04020041. ISSN: 1943-5460. DOI: <a href="https://doi.org/10.1061%2F%28ASCE%29WW.1943-5460.0000604">10.1061/(ASCE)WW.1943-5460.0000604</a>.</p>
 </div>
 </section>
-<section id="more-structuralmaterial-related" class="level3">
-<h3 class="anchored" data-anchor-id="more-structuralmaterial-related">More structural/material related</h3>
+<section id="more-structuralmaterial-related-journals" class="level3">
+<h3 class="anchored" data-anchor-id="more-structuralmaterial-related-journals">More structural/material related journals</h3>
 <p>Included journals are:</p>
 <ul>
 <li>Journal of Engineering Mechanics</li>
